# vscode-multi-workspace-dbt-sample

./: README.md  vscode-workspace-dbt-sample.code-workspace
dbt_sample/: dbt_project.yml  pyproject.toml
my_package/: README.md  pyproject.toml
my_package/my_package/: __init__.py
